crates/ridge-codegen-erl/tests/snapshots/core_ast_snapshot__actor_dispatch_with_init.snap
---
source: crates/ridge-codegen-erl/tests/core_ast_snapshot.rs
expression: "&cerl_module"
---
CErlModule {
    name: CErlAtom(
        "ridge_module_0",
    ),
    exports: [],
    attributes: [],
    fns: [],
}
