crates/ridge-codegen-erl/tests/snapshots/core_ast_snapshot__ask_default_timeout.snap
---
source: crates/ridge-codegen-erl/tests/core_ast_snapshot.rs
expression: "&cerl_module"
---
CErlModule {
    name: CErlAtom(
        "ridge_module_0",
    ),
    exports: [
        CErlExport {
            name: CErlAtom(
                "main",
            ),
            arity: 0,
        },
    ],
    attributes: [
        CErlAttribute {
            name: CErlAtom(
                "ridge_meta",
            ),
            value: Tuple(
                [
                    Lit(
                        Atom(
                            CErlAtom(
                                "ridge_meta_v1",
                            ),
                        ),
                    ),
                    Lit(
                        Atom(
                            CErlAtom(
                                "ridge_module_0",
                            ),
                        ),
                    ),
                    ListLit(
                        [
                            Tuple(
                                [
                                    Lit(
                                        Atom(
                                            CErlAtom(
                                                "fn",
                                            ),
                                        ),
                                    ),
                                    Lit(
                                        Atom(
                                            CErlAtom(
                                                "main",
                                            ),
                                        ),
                                    ),
                                    Lit(
                                        Int(
                                            0,
                                        ),
                                    ),
                                    ListLit(
                                        [],
                                    ),
                                ],
                            ),
                        ],
                    ),
                    ListLit(
                        [],
                    ),
                ],
            ),
        },
    ],
    fns: [
        CErlFn {
            name: CErlAtom(
                "main",
            ),
            arity: 0,
            anns: [
                CErlAnn(
                    "%% File: <source>, Offset: 130",
                ),
                CErlAnn(
                    "%% Caps: {}",
                ),
            ],
            body: Fun {
                params: [],
                body: Let {
                    var: CErlVar(
                        "V_C",
                    ),
                    value: Let {
                        var: CErlVar(
                            "V_Anf0",
                        ),
                        value: ListLit(
                            [
                                Lit(
                                    Int(
                                        0,
                                    ),
                                ),
                            ],
                        ),
                        body: Call {
                            module: CErlAtom(
                                "ridge_rt",
                            ),
                            fn_name: CErlAtom(
                                "spawn_actor",
                            ),
                            args: [
                                Lit(
                                    Atom(
                                        CErlAtom(
                                            "ridge_module_0_counter",
                                        ),
                                    ),
                                ),
                                Var(
                                    CErlVar(
                                        "V_Anf0",
                                    ),
                                ),
                                Lit(
                                    Nil,
                                ),
                            ],
                        },
                    },
                    body: Let {
                        var: CErlVar(
                            "V_Anf1",
                        ),
                        value: Tuple(
                            [
                                Lit(
                                    Atom(
                                        CErlAtom(
                                            "get_count",
                                        ),
                                    ),
                                ),
                            ],
                        ),
                        body: Call {
                            module: CErlAtom(
                                "ridge_rt",
                            ),
                            fn_name: CErlAtom(
                                "ask",
                            ),
                            args: [
                                Var(
                                    CErlVar(
                                        "V_C",
                                    ),
                                ),
                                Var(
                                    CErlVar(
                                        "V_Anf1",
                                    ),
                                ),
                                Lit(
                                    Int(
                                        5000,
                                    ),
                                ),
                            ],
                        },
                    },
                },
            },
        },
    ],
}
